[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voxmark"
version = "1.0.0"
description = "VML (VoxMark Language) is a declarative programming language for building interactive web applications and documents."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Divyanshu Sinha", email = "divyanshu.sinha631@gmail.com" }
]
keywords = ["markdown", "vml", "document", "engine", "flask", "interactive", "web", "webdevelopment", "opensource"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing :: Markup",
  "Framework :: Flask",
]
requires-python = ">=3.10"
dependencies = [
  "flask>=3.0",
  "mistune>=3.0",
  "pygments>=2.17",
  "waitress>=3.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[project.scripts]
voxmark = "server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["voxmark*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.setuptools.package-data]
voxmark = [
    "*.css",
]

[project.urls]
Homepage = "https://github.com/DivyanshuSinha136/VoxMark-Language/"
Repository = "https://github.com/DivyanshuSinha136/VoxMark-Language/"
Documentation = "https://divyanshusinha136.github.io/VoxMark-Language/"
Issues = "https://github.com/DivyanshuSinha136/VoxMark-Language/issues"